--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="home" href = "home.css">
+        <link rel="stylesheet" href = "home.css">
         <title>VGCMatchups</title>
         <meta name="description" content="A website">
         <h1>VGCMatchups</h1>
