Adding function to search for pokemon

--- a/home.html
+++ b/home.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href = "home.css">
-        <title>VGCMatchups</title>
+        <title>Team Analysis</title>
         <meta name="description" content="A website">
-        <h1>VGCMatchups</h1>
+        <h1>Team Analysis</h1>
     </head>
     <body>
 
