Fixing pokemon selection

--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
                     Pokémon 1
                     <div class="search-container">
                         <input type="text" id="search1" placeholder="Enter Pokémon name">
+                        <div id="suggestions1" class="suggestions"></div>
                         <div id="result1" class="result"></div>
                     </div>
                 </th>
@@ -24,6 +25,7 @@
                     Pokémon 2
                     <div class="search-container">
                         <input type="text" id="search2" placeholder="Enter Pokémon name">
+                        <div id="suggestions2" class="suggestions"></div>
                         <div id="result2" class="result"></div>
                     </div>
                 </th>
@@ -31,6 +33,7 @@
                     Pokémon 3
                     <div class="search-container">
                         <input type="text" id="search3" placeholder="Enter Pokémon name">
+                        <div id="suggestions3" class="suggestions"></div>
                         <div id="result3" class="result"></div>
                     </div>
                 </th>
@@ -38,6 +41,7 @@
                     Pokémon 4
                     <div class="search-container">
                         <input type="text" id="search4" placeholder="Enter Pokémon name">
+                        <div id="suggestions4" class="suggestions"></div>
                         <div id="result4" class="result"></div>
                     </div>
                 </th>
@@ -45,6 +49,7 @@
                     Pokémon 5
                     <div class="search-container">
                         <input type="text" id="search5" placeholder="Enter Pokémon name">
+                        <div id="suggestions5" class="suggestions"></div>
                         <div id="result5" class="result"></div>
                     </div>
                 </th>
@@ -52,6 +57,7 @@
                     Pokémon 6
                     <div class="search-container">
                         <input type="text" id="search6" placeholder="Enter Pokémon name">
+                        <div id="suggestions6" class="suggestions"></div>
                         <div id="result6" class="result"></div>
                     </div>
                 </th>
