--- a/home.html
+++ b/home.html
@@ -169,15 +169,12 @@
         <table class = "defTable">
             <tr>
                 <th></th>
-                <th>
-                    Pokémon 1
-                    <div id="result1" class="result"></div>
-                </th>
-                <th>Pokémon 2</th>
-                <th>Pokémon 3</th>
-                <th>Pokémon 4</th>
-                <th>Pokémon 5</th>
-                <th>Pokémon 6</th>
+                <th id="def1">Pokémon 1</th>
+                <th id="def2">Pokémon 2</th>
+                <th id="def3">Pokémon 3</th>
+                <th id="def4">Pokémon 4</th>
+                <th id="def5">Pokémon 5</th>
+                <th id="def6">Pokémon 6</th>
             </tr>
             <tr>
                 <th><img src="/icons/type_icons/normal.png" class = "typeName"></th>
